# Tower_game

./: README.md  horizontal_alpha.xcf  main.py  pygame_test.py  pyproject.toml  vertical_alpha.xcf
assets/work_materials/: diagonal 2.xcf  diagonal.xcf  diagonal2_alpha.xcf  diagonal_alpha.xcf  horizontal.xcf  turn.xcf  vertical.xcf
src/: camera.py  constants.py  control_panel.py  field.py  game.py  game_mode.py  helpers.py  main.py  train.py
tests/: test_tower_game.py
